# Velocity-Vortex-Data-Fetcher-Core

./: CMakeLists.txt  README.md
include/: Bar.hpp  DataFetcher.hpp  Quote.hpp  Trade.hpp
src/: DataFetcher.cpp  main.cpp
